plugins {
    id 'java-library'
}

base {
    archivesName.set('xa-mass-kernel-pacer-jvm')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    api project(':kernel_jvm')

    implementation platform('tools.jackson:jackson-bom:3.1.4')
    implementation 'tools.jackson.core:jackson-databind'

    testImplementation platform('org.junit:junit-bom:6.0.3')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:5.20.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(Test).configureEach {
    systemProperty(
            'xa.mass.repository.root',
            rootProject.projectDir.absolutePath
    )
}
